--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-* {
-    padding: 0;
-}
-
 body {
     background-color:hsl(218, 23%, 9%);
     color: white;
@@ -12,7 +8,12 @@ body {
     max-width: 366px;
 }
 
-nav li {
+header img {
+    padding: 40px 0px 0px 20px;
+    font-size: 10px;
+}
+
+  nav li {
     display: inline;
     font-family:'Raleway',sans-serif;
     font-weight: 400;
@@ -26,308 +27,59 @@ nav li {
 
   #main {
       text-align: center;
-      padding: 5px;
-      
+      margin: 50px;
   }
-
-.image {
-    text-align: center;
-    padding: 20px;
-    margin-top: 2px;
-    height: auto;
-    
-}
-.top {
-    margin: 10px;
-}
  
-button {
-     background-color: hsl(176, 68%, 64%);
-     padding: 10px;
-     border: 0px solid hsl(176, 68%, 64%);;
-     border-radius: 20px;
-     color: white;
-     width: 15%;
-     font-weight:400;
-     font-family: 'Raleway';
-     margin: 5px;
- }
-
-h3 {
-    font-family: 'Raleway';
-    font-weight: 400;
+  #main img {
+      width: 910px;
+  }
+.captions {
+    font-family: 'Raleway',sans-serif;
 }
 
- h1 {
-    font-weight: 700;
-    font-family: 'Raleway';
-    /*text-align: center;*/
-    line-height: 30px;
+.captions h1 {
+    font-size: 53px;
+    width: 82%;
+    margin: auto;
+    margin-top: 30px;
 }
 
-p {
-    font-size: 8px;
-    font-family: 'Open sans';
-    font-weight: 400;
-    line-height: 23px;
+.captions p {
+    font-family: 'open sans',sans-serif;
+    font-size: 25px;
+    font-weight: 100px;
+    max-width: 755px;
+    margin: auto;
+    margin-top: 20px;
 }
-
-.first, .second {
-   display: block;
-   max-width: 25%;
-   padding: 40px;
-   align-items: center;
-   margin: 20px;
-
-}
-
-
-
-.boxes {
-
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    margin:50px;
-    align-items: center;
-    max-width: 100%;
-    
-}
-img {
-    align-items: center;
-}
-
-.stay {
- display: block;
-padding-left: 50px;
-padding-top: 100px;
-line-height: 20px;
-}
-
-
-.all {
-    display: flex;
-    padding: 20px;
-    width: 100%;
-    flex-wrap: wrap;
-    
-
-}
-
-.stayyy {
-    font-weight: 700;
-    
-}
-
-.biggerimage {
-    margin-right: 15px;
-    justify-items: center;
-    padding-left: 8%;
-}
-
-a {
-    color:white;
-}
-
-.quotecontainer {
-    background-color: hsl(219, 30%, 18%);
-    padding: 20px;
-    margin: 15px;
-    margin-top: -20px;
-    border: opx solid hsl(219, 30%, 18%);
-    border-radius: 3px;
-    box-shadow: 1px 1px 10px hsl(218, 28%, 13%);
-    }
-
-.quotedtexts {
-    font-size: 10px;
-    padding: 3px;
-}
-
-.round {
-    height:25px;
-    width: 25px;
-    border-radius: 50%;
-    margin-bottom: 7px;
-    }
-
-.speaker {
-      display: block;
-      padding: 25px;
-      line-height: 6px;
-      margin-left: 3px;
-      padding-top: 5px;
-}
-
-.speakercircle {
-
-    display: flex;
-    height: 10px;
-    padding: 4px;
-}
-
-h3 {
-    font-size: 10px;
-    font-weight: 100;
-    font-family: 'Open sans';
-}
-
-h6 {
-
-    font-size: 1px;
-    font-family: 'san serif';
-    
-}
-
-.quote {
-     margin-top: 150px;
-     margin-left: 110px;
-     width: 15px;
-    
-}
-
-.allquotes {
-    display: flex;
-    margin-left: 112px;
-    justify-items: center;
-    max-width: 100%;
-}
-
-#form {
-    background-color: hsl(221, 27%, 12%);
-    text-align: center;
-    padding-top: 20px;
-    margin: 150px;
-    border: opx solid hsl(221, 27%, 12%);
-    border-radius: 15px;
-    box-shadow: 1px 1px 7px hsl(216, 73%, 7%);
-}
-
-.get {
-    font-family: 'Raleway';
-    font-weight: 700;
-}
-
-
-#fill-email {
-    color: black;
-    padding: 15px;
-    width: 33%;
-    padding-right: 60;
-}
-
-input {
-    border: 0px solid white;
-    margin: 10px;
-    border-radius: 30px;
-    padding: 10px;
-}
-
-form {
-     padding: 10px;
-}
-
-#button {
-     padding: 15px;
-     font-size: 9px;
-     font-family: 'Raleway';
-     background-color: hsl(176, 68%, 64%);
-     color: white;
-     width: 20%;
-}
-
-.error {
-    color:hsl(0, 100%, 63%);
-    margin-right: 350px;
-    
-}
-
-
-footer {
-    background-color: hsl(216, 53%, 9%);
-    /*display: flex;*/
-    padding: 100px;
-    margin-top: -240px;
-    position: absolute;
-    z-index: -1;
-    width: 100%;
-}
-
-.icons {
-    width: 13px;
-    height: 18px;
-    padding: 20px;
-}
-
-
-.logoo {
-    width: 100px;
-    height: 30px;
-    padding: 40px;
-    margin-right: 30px;
-}
-
-.icons2 {
-    width: 14px;
-    height: 15px;
-    padding: 15px;
-}
-
-
-.icons3 {
-    width: 18px;
-    height: 15px;
-    padding: 15px;
-    
-}
-
-
-.phone {
-    display: flex;
-    padding-right: 60px;
-}
-
-.aboutus {
+#main a {
+    font-family: 'Raleway',sans-serif;
+    font-size: 21px;
+    background: hsl(176, 68%, 64%);
     display: block;
-    padding-right: 60px;
-    
+    color: white;
+    text-decoration: none;
+    width: 22%;
+    margin: auto;
+    margin-top: 22px;
+    padding: 13px;
+    cursor: pointer;
+    border-radius: 50px;
 }
 
-
-.socials {
-    display: flex;
-    padding-right: 60px;
-    align-content: center;
-    
+.top-images {
+    display: inline-block;
+    padding: 90px 0px 0px 29%;
 }
 
-
-
-.phonemail {
-    display: block;
-    padding-right: 60px;
-}
-
-.feet {
-    display: flex;
-    padding: 10px;
-    margin-left: 0px;
-    margin: 10px;
-    max-width: 80%;
-}
-
-
-
-.fa {
-    font-size: 0.5rem;
-    /*width: 8px;*/
-    /*height: 8px;*/
-    border: 0.5px solid ;
-    border-radius: 50%;
-    padding: 7px;
-    margin: 3px;
-    align-items: center;
-    display: flex;
+.top-captions {
+    box-sizing: border-box;
+    display: inline-block;
+    font-family: 'Raleway',sans-serif;
+    font-size: 20px;
+    width: 46%;
+    padding: 20px;
+    margin-bottom: 15px;
 }
 
 .top-captions h3 {
