--- a/style.css
+++ b/style.css
@@ -7,7 +7,12 @@ body {
     color: white;
     }
     
-#nav {float: right;
+header img {
+    margin: 30px 0px 0px 30px;
+}
+
+#nav {
+    float: right;
     padding-top: 30px;
     max-width: 366px;
 }
@@ -33,7 +38,7 @@ nav li {
 .image {
     text-align: center;
     padding: 20px;
-    margin-top: 2px;
+    margin-top: 32px;
     height: auto;
     
 }
@@ -42,35 +47,35 @@ nav li {
 }
  
 button {
-     background-color: hsl(176, 68%, 64%);
-     padding: 10px;
-     border: 0px solid hsl(176, 68%, 64%);;
-     border-radius: 20px;
-     color: white;
-     width: 15%;
-     font-weight:400;
-     font-family: 'Raleway';
-     margin: 5px;
+    background-color: hsl(176, 68%, 64%);
+    padding: 13px;
+    border: 0px solid hsl(176, 68%, 64%);
+    border-radius: 50px;
+    color: white;
+    width: 16%;
+    font-weight: 400;
+    font-family: 'Raleway';
+    font-size: 16px;
+    margin: 11px;
  }
 
-h3 {
+/* h3 {
     font-family: 'Raleway';
     font-weight: 400;
-}
+} */
 
  h1 {
-    font-weight: 700;
     font-family: 'Raleway';
-    /*text-align: center;*/
-    line-height: 30px;
+    /* text-align: center; */
+    line-height: 56px;
+    font-size: 42px;
+    margin-bottom: 0px;
 }
 
 p {
-    font-size: 8px;
+    font-size: 20px;
     font-family: 'Open sans';
-    font-weight: 400;
-    line-height: 23px;
-}
+    }
 
 .first, .second {
    display: block;
@@ -78,9 +83,12 @@ p {
    padding: 40px;
    align-items: center;
    margin: 20px;
-
 }
 
+.smaller-font {
+    font-size: 14px;
+    font-family: 'Open sans';
+}
 
 
 .boxes {
@@ -88,12 +96,12 @@ p {
     display: flex;
     text-align: center;
     justify-content: center;
-    margin:50px;
+    /* margin-bottom: 0px; */
     align-items: center;
-    max-width: 100%;
+     /* max-width: 100%; */
     
 }
-img {
+.qoute img {
     align-items: center;
 }
 
@@ -126,7 +134,11 @@ line-height: 20px;
 }
 
 a {
-    color:white;
+    color: #40d3a1;
+}
+
+.icon-arrow {
+    margin-top: 20px;
 }
 
 .quotecontainer {
@@ -159,6 +171,13 @@ a {
       padding-top: 5px;
 }
 
+.speaker h4 {
+    font-family: 'Raleway',sans-serif;
+    font-size: 12px;
+    letter-spacing: 2px;
+}
+
+
 .speakercircle {
 
     display: flex;
@@ -166,24 +185,13 @@ a {
     padding: 4px;
 }
 
-h3 {
-    font-size: 10px;
-    font-weight: 100;
-    font-family: 'Open sans';
+h3 { 
+    font-family: 'Raleway';
 }
 
-h6 {
-
-    font-size: 1px;
-    font-family: 'san serif';
-    
-}
 
 .quote {
-     margin-top: 150px;
-     margin-left: 110px;
-     width: 15px;
-    
+    margin: 151px 0px 14px 127px;
 }
 
 .allquotes {
@@ -196,11 +204,10 @@ h6 {
 #form {
     background-color: hsl(221, 27%, 12%);
     text-align: center;
-    padding-top: 20px;
+    padding: 21px 0px 30px 0px;
     margin: 150px;
-    border: opx solid hsl(221, 27%, 12%);
     border-radius: 15px;
-    box-shadow: 1px 1px 7px hsl(216, 73%, 7%);
+    box-shadow: 1px 1px 7px hsl(216deg 73% 7%);
 }
 
 .get {
@@ -210,9 +217,9 @@ h6 {
 
 
 #fill-email {
-    color: black;
     padding: 15px;
-    width: 33%;
+    width: 53%;
+    margin-right: 52px;
     padding-right: 60;
 }
 
@@ -227,21 +234,26 @@ form {
      padding: 10px;
 }
 
-#button {
-     padding: 15px;
-     font-size: 9px;
-     font-family: 'Raleway';
-     background-color: hsl(176, 68%, 64%);
-     color: white;
-     width: 20%;
+.form-caption {
+    font-family: 'Open sans';
 }
 
-.error {
-    color:hsl(0, 100%, 63%);
-    margin-right: 350px;
-    
+.word input {
+    font-size: 20px;
+}
+.button {
+    padding: 18px;
+    font-size: 14px;
+    font-family: 'Raleway';
+    background-color: hsl(176, 68%, 64%);
+    color: white;
+    width: 22%;
+    cursor: pointer;
 }
 
+.button:hover {
+    color: black;
+}
 
 footer {
     background-color: hsl(216, 53%, 9%);
@@ -260,24 +272,25 @@ footer {
 }
 
 .logoo {
-    width: 100px;
-    height: 30px;
-    padding: 40px;
+    width: 169px;
+    height: 62px;
+    padding-top: 40px;
     margin-right: 30px;
 }
 
 .icons2 {
     width: 14px;
     height: 15px;
-    padding: 15px;
+    padding: 26px 19px 26px 26px;
+    display: inline;
 }
 
 
 .icons3 {
-    width: 18px;
+    width: 14px;
     height: 15px;
-    padding: 15px;
-    
+    padding: 29px 19px 26px 26px;
+    display: inline;
 }
 
 
@@ -311,8 +324,6 @@ footer {
     display: flex;
     padding: 10px;
     margin-left: 0px;
-    margin: 10px;
-    max-width: 80%;
 }
 
 
@@ -327,4 +338,28 @@ footer {
     margin: 3px;
     align-items: center;
     display: flex;
+}
+
+@media  screen and (min-width: 320px) 
+{
+    body {
+        background-color: hsl(218, 23%, 9%);
+        color: white;
+        /* align-items: center; */
+        /* text-align: end; */
+        float: left;
+    }
+    
+    #nav {
+        /* float: right; */
+        /* padding-top: 30px; */
+        /* padding-left: 167%; */
+        /* width: 22px; */
+        text-align: right;
+    }
+
+  
+
+
+
 }
